[package]
name = "bevy_project"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16"
bevy_picking = "0.16"
serde = { version = "1.0.219", features = ["derive"] }
bevy_common_assets = { version = "0.13.0", features = ["ron"] }
bevy_asset_loader = { version = "0.23.0-rc.3", features = [
    "standard_dynamic_assets",
] }
ron = "0.10.1"
once_cell = "1.21.3"

[features]
default = ["light_mode"]
light_mode = []
dark_mode = []
